[tool.poetry]
name = "kim-sanghoon.github.io"
version = "1.0.0"
description = "Website of Sanghoon Kim"
authors = ["Sanghoon Kim <20144277+kim-sanghoon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
pymdown-extensions = "^10.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
